[package]
name = "mostlybot"
description = "mostlybot is the twitch bot that I use for my stream on twitch"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/mostlymaxi/twitch-interactive-things/tree/main/twitch/bot"
documentation = "https://docs.rs/mostlybot"
authors = ["Maxi Saparov"]
keywords = ["twitch", "bot"]
license = "MIT"

[dependencies]
anyhow = "1.0.89"
franz-client = "0.1.3"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = [
	"macros",
	"process",
	"rt-multi-thread",
	"signal",
] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# twitcheventsub = { git = "https://github.com/Owlkaline/TwitchEventSub-rs", rev = "9685ed14cf0d71627fce75d43607785f3c2cf04a", features = ["logging"] }

# this is just my upstream dev branch of owl's lovely library! :D
# feel free to contribute to this as well <3
twitcheventsub = { version = "0.1.4", git = "https://github.com/mostlymaxi/TwitchEventSub-rs" }
