[workspace]
resolver = "2"
members = ["mostlybot", "mostlybot_api", "mostlybot_commands"]

[workspace.dependencies]
# Workspace member crates
mostlybot_api = { path = "mostlybot_api", default-features = false }
mostlybot_commands = { path = "mostlybot_commands", default-features = false }

# External crates
serde_json = { version = "1.0.132", default-features = false }
anyhow = { version = "1.0.92", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = [
  "attributes",
] }
# this is just my upstream dev branch of owl's lovely library! :D
# feel free to contribute to this as well <3
twitcheventsub = { version = "0.1.4", git = "https://github.com/mostlymaxi/TwitchEventSub-rs", default-features = false }
