[package]
name = "data-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
franz-client = "0.1.2"
log = "0.4.22"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twitcheventsub = "0.1.4"
