[package]
name = "points-term"
version = "0.1.0"
edition = "2021"

[dependencies]
franz-client = "0.7.2"
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7.12"
